--- a/frontweb/src/components/Navbar/styles.css
+++ b/frontweb/src/components/Navbar/styles.css
@@ -1,13 +1,14 @@
 .main-nav {
-    padding-left: 18px;
-    min-height: 68px;
+  padding-left: 18px;
+  min-height: 68px;
 }
 
-.nav-logo-text, .nav-logo-text:hover {
-    color: #000000;
+.nav-logo-text,
+.nav-logo-text:hover {
+  color: #000000;
 }
 
 .nav-logo-text h4 {
-    font-size: 24px;
-    letter-spacing: -0.015em;
+  font-size: 24px;
+  letter-spacing: -0.015em;
 }
